--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype html
-html
+html(ng-app='app')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/app.js')
   body
     block content
