--- a/views/menu.jade
+++ b/views/menu.jade
@@ -2,4 +2,4 @@ ul(class="photos")
     li
         a(href="/", class="#{viewName == 'index' ? 'current' : ''}") Home
     li
-        a(href="/photos", class="#{viewName == 'photos' ? 'current' : ''}") Photos
+        a(href="/gallery", class="#{viewName == 'gallery' ? 'current' : ''}") Photos
