--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -1,10 +1,15 @@
 extends layout
 
 block content
-  div(ng-controller="GalleryController as gallery")
+  div(ng-controller="GalleryController")
     h1= title
     include menu.jade
     p= desc
-    ul
-      li(ng-repeat="photo in gallery.photos")
-        photo {{ photo } json }}
+    img(src="/images/gears.gif", ng-show="inProgress")
+    p(ng-show="!inProgress && gallery.length == 0") Gallery is empty
+    ul(ng-show="!inProgress", class="gallery")
+      li(ng-repeat="photo in gallery")
+        div(class="photo-container")
+          div(class="loading")
+            img(src="/images/gears.gif")
+          img(ng-src="{{ photo }}", class="photo")
